--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ setInterval(updateClock, 60000);
 updateClock();
 
 /* ===== PASSWORD PROMPT ===== */
-async function getPassword(promptMsg = "Enter password:") {
-  const pw = prompt(promptMsg);
+async function getPassword(msg = "Enter password:") {
+  const pw = prompt(msg);
   if (!pw) throw new Error("Password required");
   return pw;
 }
@@ -95,11 +95,8 @@ async function getPassword(promptMsg = "Enter password:") {
 async function sendToServer(entry = {}, reset = false, line = "", action = "add", requirePassword = true) {
   let password = "";
   if (requirePassword) {
-    try {
-      password = await getPassword();
-    } catch (err) {
-      return { error: err.message };
-    }
+    try { password = await getPassword(); }
+    catch (err) { alert(err.message); return { error: err.message }; }
   }
 
   try {
@@ -108,14 +105,16 @@ async function sendToServer(entry = {}, reset = false, line = "", action = "add"
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ entry, reset, line: line || currentLine, action, password })
     });
-    const data = await res.json();
+
     if (res.status === 403) {
       alert("Wrong password!");
       return { error: "Forbidden" };
     }
-    await loadLog(); // refresh log immediately after success
+
+    const data = await res.json();
+    await loadLog();
     return data;
-  } catch (err) {
+  } catch {
     alert("Server unreachable");
     return { error: "Server unreachable" };
   }
@@ -150,7 +149,8 @@ function populateLines(data) {
   lineSelect.innerHTML = '<option value="">-- Select Line --</option>';
   lines.forEach(l => {
     const o = document.createElement("option");
-    o.value = l; o.text = l; lineSelect.appendChild(o);
+    o.value = l; o.text = l;
+    lineSelect.appendChild(o);
   });
   if (lines.includes(old)) { lineSelect.value = old; currentLine = old; }
 }
@@ -163,7 +163,7 @@ function lineChanged() {
   updateLastRunInfo();
 }
 
-/* ===== SUMMARY UPDATE ===== */
+/* ===== SUMMARY ===== */
 function updateSummary() {
   const summary = document.getElementById("summary");
   if (currentLine && lastCount !== null) {
@@ -173,7 +173,7 @@ function updateSummary() {
   }
 }
 
-/* ===== ADD / DELETE LINE ===== */
+/* ===== ADD LINE ===== */
 async function addLine() {
   const name = document.getElementById("newLine").value.trim();
   if (!name) return alert("Enter a line name");
@@ -187,15 +187,15 @@ async function addLine() {
     count: 0,
     diff: 0,
     line: currentLine
-  }, false, currentLine, "add", true);
+  }, false, currentLine, "add", true); // always prompt password
 }
 
+/* ===== DELETE LINE ===== */
 async function deleteLine() {
   if (!currentLine) return alert("Select a line first");
   if (!confirm(`Delete line "${currentLine}"?`)) return;
-  await sendToServer({}, true, currentLine, "delete", true);
-  currentLine = "";
-  lastCount = null; material = ""; runStartTime = null;
+  await sendToServer({}, true, currentLine, "delete", true); // prompt password
+  currentLine = ""; lastCount = null; material = ""; runStartTime = null;
   updateSummary();
   document.getElementById("log").innerHTML = "";
   document.getElementById("lastRun").innerHTML = "<small>No previous run</small>";
@@ -236,7 +236,7 @@ async function addEntry() {
     count,
     diff,
     line: currentLine
-  }, false, currentLine, "add", true);
+  }, false, currentLine, "add", true); // always prompt password
 
   if (!data.error) {
     lastCount = count;
@@ -249,7 +249,7 @@ async function addEntry() {
 /* ===== END RUN ===== */
 async function endRun() {
   if (!runStartTime) return alert("No active run");
-  const data = await sendToServer({}, false, currentLine, "endrun", true);
+  const data = await sendToServer({}, false, currentLine, "endrun", true); // prompt password
 
   if (!data.error && data.last_run) {
     lastRun[currentLine] = {
@@ -273,7 +273,8 @@ async function endRun() {
 
 /* ===== DISPLAY LOG ===== */
 function displayLog(data = []) {
-  const logDiv = document.getElementById("log"); logDiv.innerHTML = "";
+  const logDiv = document.getElementById("log");
+  logDiv.innerHTML = "";
   if (!currentLine) return;
   data.filter(e => e.line === currentLine && !e.last_run).forEach(e => {
     const d = document.createElement("div");
@@ -314,7 +315,7 @@ function updateLastRunInfo(data = []) {
 
 /* ===== INIT ===== */
 loadLog();
-setInterval(loadLog, 5000); // faster refresh for near-real-time updates
+setInterval(loadLog, 5000); // refresh every 5s
 </script>
 
 </body>
